# reclaimit-backend

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  postman_guide.md  pyproject.toml  verify_script.py  walkthrough.md
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
items/: admin.py  models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_contactrequest_created_at_itempost_university.py
